@@ -546,6 +546,12 @@ for border removal).</p>
           (in Future Minds screen, planes are shifted in the lower part)</td>
     </tr>
     <tr>
+      <td>Offbeat:
+      <a href="http://pouet.net/prod.php?which=13917">The Musical Wonders 1990</a></td>
+      <td>1.6.2</td>
+      <td></td>
+    </tr>
+    <tr>
       <td>Omega:
       <a href="http://pouet.net/prod.php?which=26007">Omega</a></td>
       <td class="minor">1.3</td>
